k8s/petclinic_chart/templates/tracing-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o petclinic_chart/templates
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: tracing-server
  name: tracing-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: tracing-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o petclinic_chart/templates
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/k8s-default: "true"
        io.kompose.service: tracing-server
    spec:
      containers:
        - image: openzipkin/zipkin
          name: tracing-server
          ports:
            - containerPort: 9411
          resources: {}
      restartPolicy: Always
status: {}
