k8s/petclinic_chart/templates/mysql-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-local-db.yml
    kompose.version: 1.26.1 (a9d05d509)
  labels:
    io.kompose.service: mysql-server
  name: mysql-server
spec:
  type: ExternalName
  externalName: petclinic.caihhslnnjcx.us-east-1.rds.amazonaws.com # Change this line with the endpoint of your RDS.
