k8s/petclinic_chart/templates/prometheus-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o petclinic_chart/templates
    kompose.image-pull-secret: regcred
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: prometheus-server
  name: prometheus-server
spec:
  ports:
    - name: "9091"
      port: 9091
      targetPort: 9090
  selector:
    io.kompose.service: prometheus-server
status:
  loadBalancer: {}
