k8s/petclinic_chart/templates/k8s-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: k8s-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/k8s-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/k8s-default: "true"
